--- a/buildspec.yml
+++ b/buildspec.yml
@@ -23,6 +23,7 @@ phases:
       - echo Writing image definition file...
       - printf '[{"name":"%s","imageUri":"%s"}]' $IMAGE_REPO_NAME, $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG> imgedefinitions.json
 artifacts:
-  files: imgedefinitions.json
+  files:
     - appspec.yml
     - installApp.sh
+    - imgedefinitions.json
