--- a/buildspec.yml
+++ b/buildspec.yml
@@ -50,7 +50,7 @@ phases:
       - echo Build started on `date`
       - echo Building the Docker image...
       - ls
-      - cd app   
+      #- cd app
       - docker build -t $IMAGE_REPO_NAME:latest .
       #- docker tag $IMAGE_REPO_NAME:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:latest
       - docker tag $IMAGE_REPO_NAME:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
